--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">おみくじ</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="bt_action">うらなう</string>
+    <string name="contents2">金運は非常に良く、思わぬ収入がありそう。</string>
 
 </resources>
